# toy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  toy_wrap_part.patch
luascript/: drawutil.lua  gameapp.lua  keycodes.lua  retroreload.lua  toyentry.lua
misc/: compile_shader.bat  compile_shader.py  generate_keycodes.py
script/: actor_manager.py  camera.py  drawutil.py  gameapp.py  gltfutil.py  imguiutil.py  keycodes.py  mathutil.py  shadercompiler.py  shaderutil.py  timerutil.py  toyentry.py  toyqt.py  unit_manager.py  world.py
script/editor/: editor_main.py
script/editor/qtdesigner/: main_window.ui  run_uic.bat
script/editor/qtui/: ui_main_window.py
script/units/: bullet.py  cameraman.py  enemy.py  engineinfo.py  lightman.py  player.py  projection.py  shadowman.py  testbezier.py  testculling.py  testease.py  testgltf.py  testline.py  testman.py  testmover.py  testnormal.py  testshake.py  teststoneskipping.py
shader/: basic.frag.glsl  basic.vert.glsl  clean.bat  compile_basic.bat  compile_example.bat  compile_shader.bat  compile_vertex_color.bat  depth.vert.glsl  frame_uniforms.glsl  imgui.frag.glsl  imgui.vert.glsl  light_uniforms.glsl  push_constants.glsl  shader.frag.glsl  shader.vert.glsl  shadow_uniforms.glsl  skybox.frag.glsl  skybox.vert.glsl  text.frag.glsl  text.vert.glsl  vertex_color.frag.glsl  vertex_color.vert.glsl
toy/: CMakeLists.txt
toy/src/: ascii_texture.cpp  ascii_texture.h  basic_pipeline.cpp  basic_pipeline.h  basic_shapes.cpp  basic_shapes.h  bounding_util.cpp  bounding_util.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  camera_manager.cpp  camera_manager.h  cascaded_shadow_map_util.cpp  cascaded_shadow_map_util.h  color_util.cpp  color_util.h  culling_util.cpp  culling_util.h  file_util.cpp  file_util.h  geometry_builder.cpp  geometry_builder.h  geometry_mesh.cpp  geometry_mesh.h  geometry_util.cpp  geometry_util.h  glm_util.cpp  glm_util.h  global_app.cpp  global_app.h  image_util.cpp  image_util.h  imgui_manager.cpp  imgui_manager.h  imgui_mesh.cpp  imgui_mesh.h  input_manager.cpp  input_manager.h  (+66 more)
toy/src/luawrap/: luawrap_app.cpp  luawrap_app.h  luawrap_basic_pipeline.cpp  luawrap_basic_pipeline.h  luawrap_camera.cpp  luawrap_camera.h  luawrap_camera_controller.cpp  luawrap_camera_controller.h  luawrap_camera_manager.cpp  luawrap_camera_manager.h  luawrap_geometry_builder.cpp  luawrap_geometry_builder.h  luawrap_geometry_mesh.cpp  luawrap_geometry_mesh.h  luawrap_input_manager.cpp  luawrap_input_manager.h  luawrap_light.cpp  luawrap_light.h  luawrap_light_manager.cpp  luawrap_light_manager.h  luawrap_material.cpp  luawrap_material.h  luawrap_mesh.cpp  luawrap_mesh.h  luawrap_mesh_data.cpp  luawrap_mesh_data.h  luawrap_render_manager.cpp  luawrap_render_manager.h  luawrap_resource_manager.cpp  luawrap_resource_manager.h  luawrap_script_runner.cpp  luawrap_script_runner.h  luawrap_text_builder.cpp  luawrap_text_builder.h  luawrap_texture.cpp  luawrap_texture.h  luawrap_texture_cubemap.cpp  luawrap_texture_cubemap.h  luawrap_timer_manager.cpp  luawrap_timer_manager.h  (+4 more)
toy/src/wrap/: wrap_app.cpp  wrap_app.h  wrap_basic_pipeline.cpp  wrap_basic_pipeline.h  wrap_camera.cpp  wrap_camera.h  wrap_camera_controller.cpp  wrap_camera_controller.h  wrap_camera_manager.cpp  wrap_camera_manager.h  wrap_geometry_builder.cpp  wrap_geometry_builder.h  wrap_geometry_mesh.cpp  wrap_geometry_mesh.h  wrap_imgui_manager.cpp  wrap_imgui_manager.h  wrap_imgui_mesh.cpp  wrap_imgui_mesh.h  wrap_input_manager.cpp  wrap_input_manager.h  wrap_light.cpp  wrap_light.h  wrap_light_manager.cpp  wrap_light_manager.h  wrap_material.cpp  wrap_material.h  wrap_mesh.cpp  wrap_mesh.h  wrap_mesh_data.cpp  wrap_mesh_data.h  wrap_render_manager.cpp  wrap_render_manager.h  wrap_resource_manager.cpp  wrap_resource_manager.h  wrap_script_runner.cpp  wrap_script_runner.h  wrap_text_builder.cpp  wrap_text_builder.h  wrap_texture.cpp  wrap_texture.h  (+9 more)
